@@ -22,7 +22,6 @@ import java.nio.ByteBuffer;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 public class Batched3DModel implements TileModel {
@@ -49,25 +48,28 @@ public class Batched3DModel implements TileModel {
         int batchLength = tileInfos.size();
         List<String> projectNames = tileInfos.stream()
                 .map((tileInfo) -> tileInfo.getSet().getProjectName())
-                .collect(Collectors.toList());
+                .toList();
         List<String> nodeNames = tileInfos.stream()
                 .map(TileInfo::getName)
-                .collect(Collectors.toList());
+                .toList();
         List<Double> geometricErrors = tileInfos.stream()
                 .map((tileInfo) -> tileInfo.getBoundingBox().getLongestDistance())
-                .collect(Collectors.toList());
+                .toList();
         List<Double> heights = tileInfos.stream()
                 .map((tileInfo) -> {
                     GaiaBoundingBox boundingBox = tileInfo.getBoundingBox();
                     return boundingBox.getMaxZ() - boundingBox.getMinZ();
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         GaiaScene scene = new GaiaScene(batchedSet);
 
         File outputFile = new File(command.getOptionValue(ProcessOptions.OUTPUT.getArgName()));
         Path outputRoot = outputFile.toPath().resolve("data");
-        outputRoot.toFile().mkdir();
+        if (!outputRoot.toFile().mkdir()) {
+            log.warn("[Warn] Can't create output directory.");
+        }
+
         byte[] glbBytes;
         if (command.hasOption(ProcessOptions.DEBUG_GLTF.getArgName())) {
             String glbFileName = nodeCode + ".gltf";
